--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,16 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
   </head>
+
   <body>
-
-    <h2>REACT.JS | EXPRESS | SQLITE3<br/>NOTE-TAKER</h2>
-    <h5>Author Jennifer Yunhee Kwon</h5>
+    <div>
+      <h2>REACT.JS | EXPRESS | SQLITE3<br/>NOTE-TAKER</h2>
+      <h5>Author Jennifer Yunhee Kwon</h5>
+    </div>
     <div id="root"></div>
-
   </body>
 </html>
