--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div>
+    <div id="header">
       <h2>REACT.JS | EXPRESS | SQLITE3<br/>NOTE-TAKER</h2>
       <h5>Author Jennifer Yunhee Kwon</h5>
     </div>
